fix(social-icon): spacing redgeoff/redgeoff-web@036b86b92789fd2c6b26856d3828945a4e8df3a0

--- a/css/blog.css
+++ b/css/blog.css
@@ -1,5 +1,5 @@
 
 /* Needed or else social icons have NO margin when deployed to redgeoff.com. (Issue is not present locally) */
-.social-icons {
+.social-icons a {
   margin: 3px;
 }
